Added support for word filters. Added support for temporary bans. Moved the Gosora specific template logic out of main.go and into template_init.go
Added an internal temporary group API.
We now use h1s in the theme headers. There may be some issues with the themes other than Shadow which we may need to resolve.
Added ARIA attributes in a few places for improved accessibility.
Added support for inputs in links for the .edit_field API.
Removed a few unneccesary prepared statements.

--- a/templates/account-own-edit-avatar.html
+++ b/templates/account-own-edit-avatar.html
@@ -2,7 +2,7 @@
 {{template "account-menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head rowhead">
-		<div class="rowitem"><a>Edit Avatar</a></div>
+		<div class="rowitem"><h1>Edit Avatar</h1></div>
 	</div>
 	{{if .CurrentUser.Avatar}}
 	<div class="colstack_item">
