--- a/templates/account-own-edit-email.html
+++ b/templates/account-own-edit-email.html
@@ -2,7 +2,7 @@
 {{template "account-menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head rowhead">
-		<div class="rowitem"><a>Emails</a></div>
+		<div class="rowitem"><h1>Emails</h1></div>
 	</div>
 	<div class="colstack_item">
 		<!-- TO-DO: Do we need this inline CSS? -->
