--- a/templates/account-own-edit.html
+++ b/templates/account-own-edit.html
@@ -2,7 +2,7 @@
 {{template "account-menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head rowhead">
-		<div class="rowitem"><a>Edit Password</a></div>
+		<div class="rowitem"><h1>Edit Password</h1></div>
 	</div>
 	<div class="colstack_item">
 		<form action="/user/edit/critical/submit/" method="post">
