--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 					</div>
-				{{if .Header.Widgets.RightSidebar}}<div class="sidebar">{{.Header.Widgets.RightSidebar}}</div>{{end}}
+				{{if .Header.Widgets.RightSidebar}}<aside class="sidebar">{{.Header.Widgets.RightSidebar}}</aside>{{end}}
 				<div style="clear: both;"></div>
 			</div>
 		</div>
