--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 <div class="rowblock rowhead">
-	<div class="rowitem"><a>Login</a></div>
+	<div class="rowitem"><h1>Login</h1></div>
 </div>
 <div class="rowblock">
 	<form action="/accounts/login/submit/" method="post">
