--- a/templates/panel-adminlogs.html
+++ b/templates/panel-adminlogs.html
@@ -11,7 +11,7 @@
 </nav>
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><a>Administration Logs</a></div>
+		<div class="rowitem"><h1>Administration Logs</h1></div>
 	</div>
 	<div id="panel_adminlogs" class="colstack_item rowlist">
 		{{range .Logs}}
