--- a/templates/panel-group-edit.html
+++ b/templates/panel-group-edit.html
@@ -12,7 +12,7 @@
 </nav>
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><a>{{.Name}} Group</a></div>
+		<div class="rowitem"><h1>{{.Name}} Group</h1></div>
 	</div>
 	<div id="panel_group" class="colstack_item">
 		<form action="/panel/groups/edit/submit/{{.ID}}?session={{.CurrentUser.Session}}" method="post">
