--- a/templates/panel-modlogs.html
+++ b/templates/panel-modlogs.html
@@ -11,7 +11,7 @@
 </nav>
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><a>Moderation Logs</a></div>
+		<div class="rowitem"><h1>Moderation Logs</h1></div>
 	</div>
 	<div id="panel_modlogs" class="colstack_item rowlist">
 		{{range .Logs}}
