--- a/templates/panel-plugins.html
+++ b/templates/panel-plugins.html
@@ -2,7 +2,7 @@
 {{template "panel-menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><a>Plugins</a></div>
+		<div class="rowitem"><h1>Plugins</h1></div>
 	</div>
 	<div id="panel_plugins" class="colstack_item">
 		{{range .ItemList}}
