--- a/templates/panel-settings.html
+++ b/templates/panel-settings.html
@@ -2,7 +2,7 @@
 {{template "panel-menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><a>Settings</a></div>
+		<div class="rowitem"><h1>Settings</h1></div>
 	</div>
 	<div id="panel_settings" class="colstack_item rowlist">
 		{{range $key, $value := .Something}}
