--- a/templates/panel-themes.html
+++ b/templates/panel-themes.html
@@ -20,7 +20,7 @@
 
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><a>Primary Themes</a></div>
+		<div class="rowitem"><h1>Primary Themes</h1></div>
 	</div>
 	<div id="panel_primary_themes" class="colstack_item panel_themes">
 		{{range .PrimaryThemes}}
@@ -38,7 +38,7 @@
 		{{end}}
 	</div>
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><a>Variant Themes</a></div>
+		<div class="rowitem"><h1>Variant Themes</h1></div>
 	</div>
 	<div id="panel_variant_themes" class="colstack_item panel_themes">
 		{{range .VariantThemes}}
