--- a/templates/socialgroups_create_group.html
+++ b/templates/socialgroups_create_group.html
@@ -2,7 +2,7 @@
 <main>
 
 <div class="rowblock rowhead">
-	<div class="rowitem"><a>Create Group</a></div>
+	<div class="rowitem"><h1>Create Group</h1></div>
 </div>
 <div class="rowblock">
 	<form action="/group/create/submit/" method="post">
