--- a/themes/shadow/public/main.css
+++ b/themes/shadow/public/main.css
@@ -147,6 +147,14 @@ a {
 	padding: 12px;
 }
 
+.rowitem h1 {
+	font-size: 16px;
+	font-weight: normal;
+	-webkit-margin-before: 0;
+	-webkit-margin-after: 0;
+	display: inline;
+}
+
 .rowsmall {
 	font-size: 12px;
 }
@@ -164,6 +172,13 @@ a {
 }
 .colstack_left:empty, .colstack_right:empty, .show_on_edit {
 	display: none;
+}
+
+.colline {
+	font-size: 14px;
+	background-color: rgb(61,61,61);
+	margin-top: 5px;
+	padding: 10px;
 }
 
 /* Topic View */
