--- a/templates/account-menu.html
+++ b/templates/account-menu.html
@@ -1,6 +1,6 @@
 <nav class="colstack_left">
 	<div class="colstack_item colstack_head rowhead">
-		<div class="rowitem"><a>My Account</a></div>
+		<div class="rowitem"><h1>My Account</h1></div>
 	</div>
 	<div class="colstack_item rowmenu">
 		<div class="rowitem passive"><a href="/user/edit/avatar/">Avatar</a></div>
