--- a/templates/account-own-edit-username.html
+++ b/templates/account-own-edit-username.html
@@ -2,7 +2,7 @@
 {{template "account-menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head rowhead">
-		<div class="rowitem"><a>Edit Username</a></div>
+		<div class="rowitem"><h1>Edit Username</h1></div>
 	</div>
 	<div class="colstack_item">
 		<form action="/user/edit/username/submit/" method="post">
