--- a/templates/are-you-sure.html
+++ b/templates/are-you-sure.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 <main>
 	<div class="rowblock rowhead">
-		<div class="rowitem"><a>Are you sure?</a></div>
+		<div class="rowitem"><h1>Are you sure?</h1></div>
 	</div>
 	<div class="rowblock">
 		<div class="rowitem passive">{{.Something.Message}}<br /><br />
