--- a/templates/create-topic.html
+++ b/templates/create-topic.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 <main>
 	<div class="rowblock rowhead">
-		<div class="rowitem"><a>Create Topic</a></div>
+		<div class="rowitem"><h1>Create Topic</h1></div>
 	</div>
 	<div class="rowblock">
 		<form action="/topic/create/submit/" method="post">
