--- a/templates/menu.html
+++ b/templates/menu.html
@@ -2,7 +2,7 @@
 	<div class="move_left">
 	<div class="move_right">
 	<ul>
-		<li class="menu_left menu_overview"><a href="/">{{.Header.Site.Name}}</a></li>
+		<li class="menu_left menu_overview"><a href="/" rel="home">{{.Header.Site.Name}}</a></li>
 		<li class="menu_left menu_forums"><a href="/forums/">Forums</a></li>
 		<li class="menu_left menu_topics"><a href="/">Topics</a></li>
 		<li class="menu_left menu_create_topic"><a href="/topics/create/">Create Topic</a></li>
