--- a/templates/widget_menu.html
+++ b/templates/widget_menu.html
@@ -1,5 +1,5 @@
 <div class="rowblock rowhead">
-	<div class="rowitem">{{.Name}}</div>
+	<div class="rowitem"><h1>{{.Name}}</h1></div>
 </div>
 <nav class="rowblock">{{range .MenuList}}
 	<div class="rowitem  {{if .Compact}}datarow{{end}}"><a href="{{.Location}}">{{.Text}}</a></div>
