Refactored the code to follow best standards better. Added Basic IP Search. Added more items to .gitignore Add a VSCode settings file. Refactored the theme system to allow me to add a per-user theme switcher in the following commit. Fixed h1s, rowmenus, profiles and the Control Panel Dashboard on Tempra Simple. We now catch more extreme edge case errors. Renamed route_panel_themes_default to route_panel_themes_set_default. Centralised some of the per-route ExtData fields. Added an ExtData field to headerLite. Moved SettingLabels into the Phrase System.

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,7 +1,7 @@
 <nav class="nav">
 	<div class="move_left">
 	<div class="move_right">
-	<ul>
+	<ul>{{/** Add a menu manager **/}}
 		<li class="menu_left menu_overview"><a href="/" rel="home">{{.Header.Site.Name}}</a></li>
 		<li class="menu_left menu_forums"><a href="/forums/">Forums</a></li>
 		<li class="menu_left menu_topics"><a href="/">Topics</a></li>
