--- a/templates/panel-inner-menu.html
+++ b/templates/panel-inner-menu.html
@@ -34,7 +34,7 @@
 	<div class="rowitem passive">
 		<a href="/panel/logs/mod/">Logs</a>
 	</div>
-	{{if .CurrentUser.Is_Admin}}<div class="rowitem passive">
+	{{if .CurrentUser.IsAdmin}}<div class="rowitem passive">
 		<a href="/panel/debug/">Debug</a>
 	</div>{{end}}
 </div>
