--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<title>{{.Title}}</title>
-		<link href="/static/main.css" rel="stylesheet" type="text/css">
+		<link href="/static/{{.Header.ThemeName}}/main.css" rel="stylesheet" type="text/css">
 		{{range .Header.Stylesheets}}
 		<link href="/static/{{.}}" rel="stylesheet" type="text/css">
 		{{end}}
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale = 1.0, maximum-scale=1.0,user-scalable=no" />
 	</head>
 	<body>
-		<style>{{if not .CurrentUser.Is_Super_Mod}}.supermod_only { display: none !important; }{{end}}</style>
+		<style>{{if not .CurrentUser.IsSuperMod}}.supermod_only { display: none !important; }{{end}}</style>
 		<div class="container">
 {{template "menu.html" .}}
 <div id="back"><div id="main" {{if .Header.Widgets.RightSidebar}}class="shrink_main"{{end}}>
